Tarea 25-04 cambios en el titulo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Javascript</title>
   </head>
   <body>
-    <script src="./app.js"></script>
+    <script src="./punto_1.js"></script>
 
     <script>
       //código de Js
